--- a/hacktogether-template/package.json
+++ b/hacktogether-template/package.json
@@ -12,9 +12,14 @@
     "lines_of_code_dist": "cloc --exclude-dir=node_modules --not-match-f='.*\\.(svg|md|toml)' dist"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "font-awesome": "^4.7.0",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-together": "^0.2.0"
+    "react-router-dom": "^6.28.0",
+    "react-together": "^0.2.0",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
     "@modyfi/vite-plugin-yaml": "^1.1.0",
